# sourcegraph

./: .dockerignore  docker-compose-manual-build.yml  docker-compose.yml
client/branded/src/search-ui/components/: QueryExamples.constants.ts
client/web/: package.json
cmd/cody-gateway/shared/config/: config.go
cmd/frontend/: Dockerfile
cmd/gitserver/: Dockerfile
cmd/migrator/: Dockerfile
cmd/precise-code-intel-worker/: Dockerfile
cmd/repo-updater/: Dockerfile
cmd/searcher/: Dockerfile
cmd/symbols/: Dockerfile
cmd/worker/: Dockerfile
docker-images/indexed-searcher/: Dockerfile.wolfi
docker-images/search-indexer/: Dockerfile.wolfi
internal/completions/client/: client.go
internal/completions/client/gpt4free/: BUILD.bazel  decoder.go  decoder_test.go  gpt4free.go  gpt4free_test.go
internal/conf/: computed.go
internal/conf/conftypes/: consts.go
internal/licensing/: data.go
schema/: site.schema.json
