load("//dev:go_defs.bzl", "go_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gpt4free",
    srcs = [
        "decoder.go",
        "gpt4free.go",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/completions/client/gpt4free",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/completions/tokenizer",
        "//internal/completions/tokenusage",
        "//internal/completions/types",
        "//internal/httpcli",
        "//lib/errors",
        "@com_github_sourcegraph_log//:log",
    ],
)

go_test(
    name = "gpt4free_test",
    srcs = [
        "decoder_test.go",
        "gpt4free_test.go",
    ],
    embed = [":gpt4free"],
    deps = [
        "//internal/completions/tokenusage",
        "//internal/completions/types",
        "@com_github_hexops_autogold_v2//:autogold",
        "@com_github_sourcegraph_log//:log",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
